--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^7.16.0",
     "@toolpad/core": "^0.5.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18"
