--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "15.0.0-canary.156",
     "@date-io/date-fns": "^3.0.0",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
@@ -27,6 +28,11 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.9"
+    "eslint-config-next": "14.2.9",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.5.0 || 5.0.0-canary-7118f5dd7-20230705"
   }
 }
