--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "15.0.0-canary.156",
     "@date-io/date-fns": "^3.0.0",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
@@ -18,17 +18,23 @@
     "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.0.2",
     "@mui/x-charts": "^7.16.0",
+    "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-data-grid-generator": "^7.18.0",
+    "@mui/x-data-grid-pro": "^7.18.0",
     "@mui/x-date-pickers": "^7.16.0",
+    "@next/eslint-plugin-next": "15.0.0-canary.156",
     "@toolpad/core": "^0.5.2",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
-    "next": "14.2.9",
+    "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.9",
+    "eslint-config-next": "^14.2.9",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
